# alfa-core

./: .env.example  INFRA.md  PIPELINE.md  README.md
backend/: requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  labs.py  projects.py  runs.py
cli/: pyproject.toml
cli/alfa/: cli.py  client.py
cli/alfa_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LabRunsPage.tsx  LabsPage.tsx  LoginPage.tsx  ProjectRunsPage.tsx  ProjectsPage.tsx  RegisterPage.tsx
