[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfa-cli"
version = "0.1.0"
description = "ALFA DELFA experiment-tracking CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
alfa = "alfa.cli:main"
